Change make clean

--- a/gaussian_sources/visualize/Makefile
+++ b/gaussian_sources/visualize/Makefile
@@ -18,5 +18,5 @@ build/visualize_predictions_done:
 	${arch} ${path_model} ${out_path} -fourier ${fourier} ${mode}
 
 clean:
-	rm -rf build/
+	rm -rf ${out_path}
 
