--- a/gaussian_sources/Makefile
+++ b/gaussian_sources/Makefile
@@ -26,7 +26,7 @@ ${data}/fft_samp_train0.h5:
 		-amp_phase ${amp_phase} \
 		-noise ${noise} \
 		-preview ${preview} \
-		-specific_mask True \
+		-specific_mask False \
 		-lon -80 \
 		-lat 50 \
 		-steps 50
