New command for new examples

--- a/simulations/Makefile
+++ b/simulations/Makefile
@@ -1,5 +1,10 @@
+new_examples: clean examples
+
 examples: examples/recons_source.pdf
 
 examples/recons_source.pdf:
 		mkdir -p ./examples/
 		python visualize_sampling.py
+
+clean:
+	rm -r examples/
