--- a/dl_training/scripts/default_train_config.toml
+++ b/dl_training/scripts/default_train_config.toml
@@ -5,8 +5,9 @@ title = "Train configuration"
 [paths]
 data_path = "./build/"
 
-[data]
+[general]
 fourier = true
+arch_name = "filter_deep"
 
 [hypers]
 batch_size = 64
