--- a/dl_training/scripts/default_train_config.toml
+++ b/dl_training/scripts/default_train_config.toml
@@ -4,6 +4,7 @@ title = "Train configuration"
 
 [paths]
 data_path = "./build/"
+model_path = "./build/models/test.model"
 
 [general]
 fourier = true
