--- a/dl_training/scripts/default_train_config.toml
+++ b/dl_training/scripts/default_train_config.toml
@@ -4,15 +4,16 @@ title = "Train configuration"
 
 [paths]
 data_path = "./build/"
-model_path = "./build/models/test.model"
+model_path = "./build/test_model/test.model"
 pre_model = "none"
-norm_path = "none"
+norm_path = "./build/norm_factors.csv"
 
 [general]
 fourier = true
 arch_name = "filter_deep"
 loss_func = "mse"
-num_epochs = 5
+num_epochs = 2
+inspection = false
 
 [hypers]
 batch_size = 64
