add parameter scheduling

--- a/dl_training/scripts/default_train_config.toml
+++ b/dl_training/scripts/default_train_config.toml
@@ -27,3 +27,9 @@ lr = 1e-3
 [lr_find]
 max_lr = 1e-1
 min_lr = 1e-7
+
+[param_scheduling]
+use = true
+lr_start = 1e-3
+lr_max = 5e-3
+lr_stop = 7e-4
