specify sampling layout by name

--- a/radionets/simulations/scripts/default_simulation_config.toml
+++ b/radionets/simulations/scripts/default_simulation_config.toml
@@ -39,7 +39,7 @@ specific_mask = true
 lon = -80
 lat = 50
 steps = 50
-antenna_config_path = "../radionets/simulations/layouts/vlba.txt"
+antenna_config = "vlba"
 compressed = false
 keep_fft_files = true
 source_list = false
