delete old stuff

--- a/.gitignore
+++ b/.gitignore
@@ -6,16 +6,11 @@
 */data*
 *.uvf
 *.h5
-
-#test data
-*/test_data
-test_data
-simulations/data/
+radionets/simulations/test_data
 
 #evaluation results
 */results
 results/
-simulations/test_data/
 
 # cache
 __pycache__/
@@ -36,24 +31,14 @@ __pycache__/
 # make
 *_done
 */build
-build/
 
-# old stuff
-mnist_cnn/old
 
 *.pyc
 *.vscode
-
 *.eggs
 *.egg-info
-
-/mnist_cnn/visualize/test_data
-
 .flake8
-*.yaml
 .makerc
 .coverage
-
 dist/
-
-gaussian_sources/models/
+radionets/dl_framework/values.yaml
