set telegram_logger default to false

--- a/examples/default_train_config.toml
+++ b/examples/default_train_config.toml
@@ -4,7 +4,7 @@ title = "Train configuration"
 
 [mode]
 batch_mode = false
-telegram_logger = true
+telegram_logger = false
 
 [paths]
 data_path = "./build/"
