--- a/examples/default_eval_config.toml
+++ b/examples/default_eval_config.toml
@@ -17,7 +17,10 @@ amp_phase = true
 source_list = false
 arch_name = "filter_deep"
 
-[eval]
-visualize_prediction = true
+[inspection]
+visualize_prediction = false
 visualize_source_reconstruction = false
 num_images = 5
+
+[eval]
+evaluate_viewing_angle = true
