--- a/examples/default_train_config.toml
+++ b/examples/default_train_config.toml
@@ -15,6 +15,7 @@ norm_path = "none"
 
 [general]
 fourier = true
+amp_phase = true
 source_list = false
 arch_name = "filter_deep"
 loss_func = "splitted_mse"
