--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
   - conda info -a
 
   - conda env create -f environment.yml
-  - conda activate radionets
+  - source activate radionets
 
 script:
 - py.test --ignore=tests
