Update toml files

--- a/examples/.rc/training_filter_deep_amp.toml
+++ b/examples/.rc/training_filter_deep_amp.toml
@@ -19,8 +19,9 @@ amp_phase = true
 source_list = false
 arch_name = "filter_deep_amp"
 loss_func = "loss_amp"
-num_epochs = 400
+num_epochs = 200
 inspection = false
+output_format = "png"
 
 [hypers]
 batch_size = 100
@@ -28,6 +29,6 @@ lr = 2e-3
 
 [param_scheduling]
 use = true
-lr_start = 1e-1
-lr_max = 5e-1
-lr_stop = 1e0
+lr_start = 1e-3
+lr_max = 5e-3
+lr_stop = 1e-2
