--- a/examples/default_eval_config.toml
+++ b/examples/default_eval_config.toml
@@ -24,6 +24,7 @@ arch_name_2 = "none"
 [inspection]
 visualize_prediction = true
 visualize_source_reconstruction = true
+visualize_contour = true
 visualize_dynamic_range = true
 visualize_blobs = true
 visualize_ms_ssim = true
@@ -36,3 +37,4 @@ evaluate_viewing_angle = true
 evaluate_dynamic_range = true
 evaluate_ms_ssim = true
 evaluate_mean_diff = true
+evaluate_area = true
