Added diff keyword to example

--- a/examples/default_eval_config.toml
+++ b/examples/default_eval_config.toml
@@ -19,6 +19,7 @@ amp_phase = true
 source_list = false
 arch_name = "filter_deep"
 arch_name_2 = "none"
+diff = false
 
 [inspection]
 visualize_prediction = true
