--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,8 +23,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          conda env create -f environment.yml
-          source activate radionets
+          $CONDA/bin/conda env update --file environment.yml --name base
+      
       - name: tests
         run: py.test --ignore=tests --cov radionets --cov-report=xml
 
