--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [3.9]
 
     steps:
       - uses: actions/checkout@v2
@@ -26,6 +26,7 @@ jobs:
           $CONDA/bin/conda env update --file environment.yml --name base
       
       - name: tests
-        run: py.test --ignore=tests --cov radionets --cov-report=xml
+        run: conda install pytest
+          $CONDA/bin/py.test --ignore=tests --cov radionets --cov-report=xml
 
       - uses: codecov/codecov-action@v1
