--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
       
       - name: tests
         run: |
-          conda activate base
+          $CONDA/bin/conda activate base
           $CONDA/bin/pytest --ignore=tests --cov radionets --cov-report=xml
 
       - uses: codecov/codecov-action@v1
