--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,7 @@ jobs:
       
       - name: tests
         run: |
+          $CONDA/bin/conda init bash
           $CONDA/bin/conda activate base
           $CONDA/bin/pytest --ignore=tests --cov radionets --cov-report=xml
 
