--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,8 @@ jobs:
       
       - name: tests
         run: |
+          $CONDA/bin/conda init bash
+          source ~/.bashrc    # <- !!!
           $CONDA/bin/conda activate radionets
           $CONDA/bin/pytest --ignore=tests --cov radionets --cov-report=xml
 
