--- a/new_tests/training.toml
+++ b/new_tests/training.toml
@@ -17,9 +17,9 @@ norm_path = "none"
 fourier = true
 amp_phase = true
 source_list = false
-arch_name = "SRResNet_unc_phase"
-loss_func = "l1_phase_unc"
-num_epochs = 5
+arch_name = "SRResNet_bigger"
+loss_func = "splitted_L1"
+num_epochs = 2
 inspection = false
 output_format = "pdf"
 
