--- a/new_tests/evaluate.toml
+++ b/new_tests/evaluate.toml
@@ -4,11 +4,11 @@ title = "Evaluation configuration"
 
 [mode]
 quiet = false
-gpu = true
+gpu = false
 
 [paths]
 data_path = "./new_tests/build/data/"
-model_path = "./new_tests/build/test_training/test_training.model"
+model_path = "./new_tests/model/model_eval.model"
 model_path_2 = "none"
 norm_path = "none"
 
@@ -29,7 +29,7 @@ visualize_dynamic_range = false
 visualize_blobs = false
 visualize_ms_ssim = false
 random = true
-num_images = 10
+num_images = 2
 
 [eval]
 batch_size = 100
