--- a/new_tests/evaluate.toml
+++ b/new_tests/evaluate.toml
@@ -38,3 +38,4 @@ evaluate_dynamic_range = false
 evaluate_ms_ssim = false
 evaluate_mean_diff = false
 evaluate_area = false
+evaluate_point = false
