--- a/environment.yml
+++ b/environment.yml
@@ -7,7 +7,7 @@ channels:
 dependencies:
   - python>=3.6
   - pytorch>=1.6
-  - torchvision
+  - torchvision<0.10.0
   - cudatoolkit=10.2
   - cartopy
   - pip
