--- a/tests/evaluate.toml
+++ b/tests/evaluate.toml
@@ -16,7 +16,7 @@ norm_path = "none"
 fourier = true
 amp_phase = true
 source_list = false
-arch_name = "SRResNet_bigger"
+arch_name = "SRResNet_bigger_no_symmetry"
 arch_name_2 = "none"
 output_format = "png"
 diff = true
