--- a/tests/simulate.toml
+++ b/tests/simulate.toml
@@ -19,14 +19,14 @@ num_components = [4, 10]
 
 [point_sources]
 simulate = false
-add_extended = true
+add_extended = false
 
 [image_options]
 bundles_train = 1
 bundles_valid = 1
 bundles_test = 1
 bundle_size = 100
-img_size = 63
+img_size = 64
 noise = true
 noise_level = 5
 
@@ -42,5 +42,5 @@ antenna_config = "vlba"
 compressed = false
 keep_fft_files = true
 source_list = false
-interpolation = true
+interpolation = false
 multi_channel= false
