--- a/tests/training.toml
+++ b/tests/training.toml
@@ -17,7 +17,7 @@ norm_path = "none"
 fourier = true
 amp_phase = true
 source_list = false
-arch_name = "SRResNet_bigger"
+arch_name = "SRResNet_bigger_no_symmetry"
 loss_func = "splitted_L1"
 num_epochs = 2
 inspection = false
