--- a/examples/.rc/simulations/simulation_local.toml
+++ b/examples/.rc/simulations/simulation_local.toml
@@ -15,20 +15,18 @@ resource = "../../resources/mnist.pkl.gz"
 
 [gaussians]
 simulate = true
-pointsources = false
-num_pointsources = 10
-pointlike_gaussians = false
-num_pointlike_gaussians = 5
-extended_gaussians = true
 num_components = [4, 10]
 
+[point_sources]
+simulate = false
+add_extended = true
 
 [image_options]
 bundles_train = 1
 bundles_valid = 0
 bundles_test = 0
 bundle_size = 10
-img_size = 63
+img_size = 64
 noise = false
 noise_level = 5
 
@@ -45,3 +43,4 @@ keep_fft_files = true
 source_list = false
 compressed = false
 interpolation = false
+multi_channel = false
