--- a/examples/.rc/simulations/simulation_pointlike_gaussians.toml
+++ b/examples/.rc/simulations/simulation_pointlike_gaussians.toml
@@ -14,21 +14,19 @@ simulate = false
 resource = "../../resources/mnist.pkl.gz"
 
 [gaussians]
-simulate = true
-pointsources = false
-num_pointsources = 10
-pointlike_gaussians = true
-num_pointlike_gaussians = 5
-extended_gaussians = false
+simulate = false
 num_components = [4, 10]
 
+[point_sources]
+simulate = true
+add_extended = true
 
 [image_options]
 bundles_train = 1
 bundles_valid = 1
 bundles_test = 1
 bundle_size = 10
-img_size = 63
+img_size = 64
 noise = false
 noise_level = 5
 
@@ -45,3 +43,4 @@ keep_fft_files = true
 source_list = false
 compressed = false
 interpolation = false
+multi_channel = false
