--- a/examples/default_train_config.toml
+++ b/examples/default_train_config.toml
@@ -18,7 +18,7 @@ fourier = true
 amp_phase = true
 source_list = false
 arch_name = "filter_deep"
-loss_func = "splitted_mse"
+loss_func = "splitted_L1"
 num_epochs = 5
 inspection = true
 output_format = "png"
