--- a/examples/default_eval_config.toml
+++ b/examples/default_eval_config.toml
@@ -13,23 +13,23 @@ model_path_2 = "none"
 norm_path = "none"
 
 [general]
-output_format = "png"
 fourier = true
 amp_phase = true
 source_list = false
 arch_name = "filter_deep"
 arch_name_2 = "none"
+output_format = "png"
 diff = false
 
 [inspection]
 visualize_prediction = true
 visualize_source_reconstruction = true
 visualize_contour = true
-visualize_dynamic_range = true
+visualize_dynamic_range = false
 visualize_blobs = true
-visualize_ms_ssim = true
-num_images = 5
+visualize_ms_ssim = false
 random = false
+num_images = 5
 
 [eval]
 batch_size = 100
@@ -38,3 +38,4 @@ evaluate_dynamic_range = true
 evaluate_ms_ssim = true
 evaluate_mean_diff = true
 evaluate_area = true
+evaluate_point = false
