--- a/environment.yml
+++ b/environment.yml
@@ -7,8 +7,8 @@ channels:
 dependencies:
   - python>=3.6
   - pytorch>=1.6
-  - torchvision<0.10.0
-  - cudatoolkit=10.2
+  - torchvision
+  - cudatoolkit
   - cartopy
   - pip
   - pip:
