--- a/tracking/evaluate_jet.toml
+++ b/tracking/evaluate_jet.toml
@@ -7,10 +7,9 @@ quiet = false
 gpu = false
 
 [paths]
-# data_path = "/net/big-tank/POOL/projects/radio/simulations/jet_components/2022-04-08_n10000_size256"
-data_path = "/net/big-tank/POOL/projects/radio/simulations/jet_components/testing"
-outpath = "/net/big-tank/POOL/projects/radio/simulations/jet_components/2022-04-08_n10000_size256"
-model_path = "/net/big-tank/POOL/users/apoggenpohl/radionets/models/2022-03-11_unet_jet_clean.model"
+data_path = "/net/big-tank/POOL/projects/radio/simulations/jet_components/220527_n10000_s256"
+outpath = "./build"
+model_path = "/net/big-tank/POOL/users/apoggenpohl/radionets/models/220527_unet_jet_segmentation_c7.model"
 model_path_2 = "none"
 norm_path = "none"
 
@@ -18,7 +17,7 @@ norm_path = "none"
 fourier = false
 amp_phase = false
 source_list = false
-arch_name = "UNet_clean"
+arch_name = "UNet_jet"
 arch_name_2 = "none"
 output_format = "png"
 diff = true
