add switch loss to toml file

--- a/examples/default_train_config.toml
+++ b/examples/default_train_config.toml
@@ -22,6 +22,8 @@ loss_func = "splitted_L1"
 num_epochs = 5
 inspection = true
 output_format = "png"
+switch_loss = true
+when_switch = 25
 
 [hypers]
 batch_size = 100
