--- a/tests/evaluate.toml
+++ b/tests/evaluate.toml
@@ -34,9 +34,9 @@ num_images = 10
 [eval]
 batch_size = 20
 evaluate_viewing_angle = true
-evaluate_dynamic_range = true
+evaluate_dynamic_range = false
 evaluate_ms_ssim = false
-evaluate_mean_diff = true
-evaluate_area = true
+evaluate_mean_diff = false
+evaluate_area = false
 evaluate_point = false
-evaluate_gan = true
+evaluate_gan = false
