--- a/tests/evaluate.toml
+++ b/tests/evaluate.toml
@@ -24,7 +24,7 @@ diff = true
 [inspection]
 visualize_prediction = true
 visualize_source_reconstruction = true
-visualize_contour = false
+visualize_contour = true
 visualize_dynamic_range = false
 visualize_blobs = false
 visualize_ms_ssim = false
@@ -34,9 +34,9 @@ num_images = 10
 [eval]
 batch_size = 20
 evaluate_viewing_angle = true
-evaluate_dynamic_range = false
+evaluate_dynamic_range = true
 evaluate_ms_ssim = false
-evaluate_mean_diff = false
-evaluate_area = false
-evaluate_point = false
-evaluate_gan = false
+evaluate_mean_diff = true
+evaluate_area = true
+evaluate_point = true
+evaluate_gan = true
