--- a/tests/evaluate.toml
+++ b/tests/evaluate.toml
@@ -38,5 +38,5 @@ evaluate_dynamic_range = true
 evaluate_ms_ssim = false
 evaluate_mean_diff = true
 evaluate_area = true
-evaluate_point = true
+evaluate_point = false
 evaluate_gan = true
