--- a/tests/evaluate.toml
+++ b/tests/evaluate.toml
@@ -36,8 +36,8 @@ batch_size = 20
 evaluate_viewing_angle = true
 evaluate_dynamic_range = true
 evaluate_ms_ssim = false
-evaluate_mean_diff = false
-evaluate_area = false
+evaluate_mean_diff = true
+evaluate_area = true
 evaluate_point = false
 predict_grad = false 
 evaluate_gan = true
