--- a/tests/evaluate.toml
+++ b/tests/evaluate.toml
@@ -32,6 +32,7 @@ num_images = 10
 
 [eval]
 batch_size = 20
+save_vals = false
 evaluate_viewing_angle = true
 evaluate_dynamic_range = true
 evaluate_ms_ssim = false
