--- a/tests/evaluate.toml
+++ b/tests/evaluate.toml
@@ -6,7 +6,7 @@ title = "Evaluation configuration"
 quiet = false
 
 [paths]
-data_path = "./tests/build/data/"
+data_path = "./tests/model/"
 model_path = "./tests/model/paper_fixed_64_even.model"
 model_path_2 = "none"
 norm_path = "none"
