Add uncertainty training (#119)
* New arch

* BLack changes

* New loss function

* Add callback for loss function changing

* calc difference before unc part

* Changed input for uncertainty architecture

* Change elu to 1e-7

* change loss func after 25 epochs

* enable switch loss func

* black

* Add load_pretrained changes for eval

* Add l1 loss func

* fix nans in elu

* Move uncertainty archs to new file

* little renaming and documentation for loss functions

* Update mask to newest version

* Update archs and loss functions

* add switch loss to toml file

* fix missing option in test toml

* Black and small improvements

* Delete CometCallback

* access gradients in training and evaluate test image grads

* add evaluate gradient to toml files

* remove old line of code

* Fix tests and double occurence of cbfs

* Black changes

* get spatial gradients in fourier

* better gradient readout

* Remove unnecessary parameter

* Add first implementation of beta_nll loss

* gradient callback work in progress

* fixed gradient callback

* First version of symmetry layer

* Turn the other tests oon

* Small changes to training.toml

* Reset things

* Delete unused keyword gpu

* Remove unused archs, import from res_exp

* Add new colormap

* Plot different image if uncertainty training

* Remove axhline

* Remove GradientCallback from learner

* Delete comments

* Add keyword for uncertainty

* Black

* Update Amp and Phase architecture

* Delete outcommented lines

* Uncomment olivias work

* Uncomment again

* Change colorbar labeling

* Change white noise

* Pump up version number

* Delete training white space

* Add equal sign

* Print exception

* No dynamic range

* Comment in

* Add equal sign

* Add nice images to evaluate

* Another equal sign and delete prints

Co-authored-by: Kevin Schmidt <kevin3.schmidt@tu-dortmund.de>
Co-authored-

--- a/examples/default_eval_config.toml
+++ b/examples/default_eval_config.toml
@@ -4,7 +4,6 @@ title = "Evaluation configuration"
 
 [mode]
 quiet = true
-gpu = false
 
 [paths]
 data_path = "./example_data/"
@@ -39,4 +38,5 @@ evaluate_ms_ssim = true
 evaluate_mean_diff = true
 evaluate_area = true
 evaluate_point = false
+predict_grad = false
 evaluate_gan = false
