--- a/tests/evaluate.toml
+++ b/tests/evaluate.toml
@@ -4,10 +4,9 @@ title = "Evaluation configuration"
 
 [mode]
 quiet = false
-gpu = false
 
 [paths]
-data_path = "./tests/build/data/"
+data_path = "./tests/model/"
 model_path = "./tests/model/paper_fixed_64_even.model"
 model_path_2 = "none"
 norm_path = "none"
@@ -39,4 +38,5 @@ evaluate_ms_ssim = false
 evaluate_mean_diff = true
 evaluate_area = true
 evaluate_point = false
+predict_grad = false 
 evaluate_gan = true
