--- a/tests/simulate.toml
+++ b/tests/simulate.toml
@@ -29,6 +29,7 @@ bundle_size = 100
 img_size = 64
 noise = true
 noise_level = 5
+white_noise = false
 
 [sampling_options]
 fourier = true
@@ -44,3 +45,4 @@ keep_fft_files = true
 source_list = false
 interpolation = false
 multi_channel= false
+bandwidths = 1
