--- a/tests/simulate.toml
+++ b/tests/simulate.toml
@@ -30,6 +30,10 @@ img_size = 64
 noise = true
 noise_level = 5
 white_noise = false
+mean_real = 0.85
+std_real = 0.0425
+mean_imag = 0.2
+std_imag = 0.01
 
 [sampling_options]
 fourier = true
