--- a/examples/default_eval_config.toml
+++ b/examples/default_eval_config.toml
@@ -32,6 +32,8 @@ num_images = 5
 
 [eval]
 batch_size = 100
+save_vals = false
+save_path = "./build/"
 evaluate_viewing_angle = true
 evaluate_dynamic_range = true
 evaluate_ms_ssim = true
