--- a/examples/default_simulation_config.toml
+++ b/examples/default_simulation_config.toml
@@ -29,6 +29,11 @@ bundle_size = 200
 img_size = 63
 noise = false
 noise_level = 5
+white_noise = false
+mean_real = 0.85
+std_real = 0.0425
+mean_imag = 0.2
+std_imag = 0.01
 
 [sampling_options]
 fourier = true
@@ -44,3 +49,4 @@ source_list = false
 compressed = false
 interpolation = false
 multi_channel = false
+bandwidths = 1
