Fix version in build changelog

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,5 +57,5 @@ jobs:
 
       - name: Produce Changelog
         run: |
-          towncrier build --yes
-      
+          towncrier build --yes --version==0.0.0
+
