--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,17 @@
 name: CI
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+    tags:
+      - '**'
+  pull_request:
 
 env:
   MPLBACKEND: Agg
   PYTEST_ADDOPTS: --color=yes
+  GITHUB_PR_NUMBER: ${{ github.event.number }}
 
 jobs:
   tests:
@@ -30,3 +37,25 @@ jobs:
           $CONDA/bin/pytest --cov radionets --cov-report=xml
 
       - uses: codecov/codecov-action@v3
+
+  docs:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.8"
+      
+      - name: Install doc dependencies
+        run: |
+          sudo apt update --yes && sudo apt install --yes git 
+          pip install -U pip towncrier
+
+      - name: Produce Changelog
+        run: |
+          towncrier build --yes --version==0.0.0
+
