--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,4 +7,4 @@ repos:
     rev: 4.0.1
     hooks:
       - id: flake8
-        args: [--max-line-length=88, "--extend-ignore=E203"]
+        args: [--max-line-length=88, "--extend-ignore=E203, F403, F401"]
