Enable conda-forge, add numba dependency

--- a/environment.yml
+++ b/environment.yml
@@ -4,11 +4,14 @@ channels:
     - fastai
     - pytorch
     - defaults
+    - conda-forge
 dependencies:
   - python>=3.6
   - pytorch>=1.6
   - cudatoolkit
   - cartopy
+  - numpy
+  - numba
   - pip
   - pip:
     - towncrier
