--- a/tests/training.toml
+++ b/tests/training.toml
@@ -21,7 +21,7 @@ norm_path = "none"
 [general]
 fourier = true
 amp_phase = true
-normalize = false
+normalize = "none"
 source_list = false
 arch_name = "SRResNet"
 loss_func = "splitted_L1"
