--- a/tests/evaluate.toml
+++ b/tests/evaluate.toml
@@ -37,7 +37,7 @@ save_path = "./build/"
 evaluate_viewing_angle = true
 evaluate_dynamic_range = true
 evaluate_ms_ssim = false
-evaluate_intensity = false
+evaluate_intensity = true
 evaluate_mean_diff = true
 evaluate_area = true
 evaluate_point = false
