--- a/tests/evaluate.toml
+++ b/tests/evaluate.toml
@@ -7,14 +7,14 @@ quiet = false
 
 [paths]
 data_path = "./tests/model/"
-model_path = "./tests/model/paper_fixed_64_even.model"
+model_path = "./tests/model/instance.model"
 model_path_2 = "none"
 
 [general]
 fourier = true
-amp_phase = true
+amp_phase = false
 source_list = false
-arch_name = "SRResNet"
+arch_name = "SRResNet_16"
 arch_name_2 = "none"
 output_format = "png"
 diff = true
