--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,9 +70,10 @@ jobs:
 
       - name: Tests
         run: |
-          py.test --cov radionets --cov-report=xml
+          py.test --cov --cov-report=xml
 
       - uses: codecov/codecov-action@v3
+        if: contains(matrix.extra-args, 'codecov')
 
   docs:
     runs-on: ubuntu-latest
